# jot

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PRD.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.kilo/agent/: perf-reviewer.md
.review/: code-review-2026-04-08.md  code-review-full-2026-04-08.md  move-templates-to-dashboard.md  yougile-subtasks-plan.md
docs/: task-templates-plan.md  yougile-ckeditor5-reference.md  yougile.json
plans/: yougile-rearchitecture.md
src/: App.test.tsx  App.tsx  Dashboard.tsx  Settings.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  parser.rs
src-tauri/src/db/: checklists.rs  columns.rs  migrations.rs  mod.rs  notes.rs  settings.rs  tags.rs  tasks.rs  templates.rs  utils.rs  yougile_accounts.rs
src-tauri/src/provider/: local.rs  mod.rs  sync.rs  yougile.rs
src-tauri/src/yougile/: auth.rs  client.rs  commands.rs  mod.rs  models.rs
src/components/: AccountsSettings.tsx  CalendarView.tsx  ChecklistEditor.tsx  ErrorBoundary.tsx  FocusProvider.tsx  HighlightedInput.tsx  HotkeyCheatSheet.tsx  KanbanBoard.tsx  KanbanColumn.tsx  KanbanTaskCard.tsx  ModeIndicator.tsx  SourceSwitcher.tsx  SubtaskList.tsx  (+6 more)
(+60 files in other folders)
